<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/how_to_bg"
    android:backgroundTint="@color/accent"
    android:backgroundTintMode="multiply"
    tools:context=".HowToImport"
    android:animateLayoutChanges="true">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_instructions"
        android:textColor="@color/accent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_watch_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:text="@string/watch_video"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/get_lightroom"
            android:layout_marginEnd="10dp"
            android:tag="https://play.google.com/store/apps/details?id=com.adobe.lrmobile"
            android:onClick="openLightRoom"/>
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:alpha="0.8"
        android:background="@drawable/transparent_bg"
        android:backgroundTint="@color/accent"
        android:backgroundTintMode="multiply"/>

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/circle_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:ci_height="5dp"
        app:ci_width="5dp"
        app:ci_drawable_unselected="@drawable/indicator_unselected"
        app:ci_drawable="@drawable/indicator_selected"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:background="@drawable/transparent_bg"
        android:text="@string/skip"
        android:textColor="@color/accent"
        android:foreground="?attr/selectableItemBackground"/>
</LinearLayout>