<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/main_bg"
    android:backgroundTint="@color/accent"
    android:backgroundTintMode="multiply"
    android:orientation="vertical"
    tools:context=".AboutApp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_aa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_bg"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/app_name_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.5"
            app:cardCornerRadius="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:letterSpacing="0.2"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/app_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="40dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/app_icon" />
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/odukle_card"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/odukle" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/details_card"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    app:cardCornerRadius="10dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/created_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/odukle_card"
                        android:layout_margin="10dp"
                        android:layout_toEndOf="@+id/odukle_card"
                        android:text="@string/created_by"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_follow"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:alpha="0.5"
                    android:onClick="openLink"
                    android:tag="https://www.instagram.com/odukle.jpg"
                    android:text="@string/follow"
                    app:icon="@drawable/ic_instagram" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:alpha="0.5"
                    android:onClick="openEmail"
                    android:tag="sodukle@gmail.com"
                    android:text="@string/contact"
                    app:icon="@drawable/ic_envelope" />
            </LinearLayout>




        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions1"
            android:textColor="@color/accent"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/instructions2"
            android:textColor="@color/accent"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/instructions3"
            android:textColor="@color/accent"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/accent"
            android:alpha="0.5"
            app:cardCornerRadius="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"
                android:text="@string/ps_request"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>




</LinearLayout>