<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:alpha="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imageView_before_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/gloomy2og"
                android:layout_weight="1"
                android:adjustViewBounds="true"/>

            <ImageView
                android:id="@+id/imageView_after_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/gloomy2"
                android:layout_weight="1"
                android:adjustViewBounds="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="10dp"
            android:layout_gravity="bottom">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewAll"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_all"
                app:cornerRadius="40dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_downloadAll"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/download_all"
                app:cornerRadius="40dp"/>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:letterSpacing="1"
            android:shadowColor="@android:color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>